syntaxes/antlr4_parser/powerfx/PowerFxParser.py
# Generated from PowerFxParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PowerFxParser ( Parser ):

    grammarFileName = "PowerFxParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'+'", "'-'", "'*'", "'/'", "'^'", "'%'", "'&&'", "'||'", 
                     "'!'", "'='", "'<'", "'<='", "'>'", "'>='", "'<>'", 
                     "'in'", "'exactin'", "'.'", "';'", "','", "'('", "')'", 
                     "'{'", "'}'", "'['", "']'", "'@'", "':'", "'Parent'", 
                     "'Self'", "'ThisItem'", "'ThisRecord'", "'true'", "'false'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'[@'" ]

    symbolicNames = [ "<INVALID>", "WS", "LINE_COMMENT", "BLOCK_COMMENT", 
                      "PLUS", "MINUS", "MUL", "DIV", "POW", "MOD", "AND", 
                      "OR", "NOT", "EQ", "LT", "LTE", "GT", "GTE", "NEQ", 
                      "IN", "EXACTIN", "DOT", "SEMI", "COMMA", "LPAREN", 
                      "RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", 
                      "AT", "COLON", "PARENT", "SELF", "THISITEM", "THISRECORD", 
                      "TRUE", "FALSE", "NUMBER", "STRING", "IDENTIFIER", 
                      "SINGLE_QUOTE_STRING", "OPEN_BRACKET_AT" ]

    RULE_expressionUnit = 0
    RULE_expressionElements = 1
    RULE_expressionElement = 2
    RULE_expression = 3
    RULE_literal = 4
    RULE_logicalLiteral = 5
    RULE_numberLiteral = 6
    RULE_textLiteral = 7
    RULE_reference = 8
    RULE_baseReference = 9
    RULE_referenceOperator = 10
    RULE_referenceList = 11
    RULE_inlineRecord = 12
    RULE_inlineRecordList = 13
    RULE_inlineTable = 14
    RULE_inlineTableList = 15
    RULE_disambiguatedIdentifier = 16
    RULE_tableColumnIdentifier = 17
    RULE_globalIdentifier = 18
    RULE_functionCall = 19
    RULE_functionIdentifier = 20
    RULE_functionArguments = 21
    RULE_chainedExpression = 22
    RULE_contextKeyword = 23
    RULE_binaryOperator = 24
    RULE_prefixOperator = 25
    RULE_postfixOperator = 26

    ruleNames =  [ "expressionUnit", "expressionElements", "expressionElement", 
                   "expression", "literal", "logicalLiteral", "numberLiteral", 
                   "textLiteral", "reference", "baseReference", "referenceOperator", 
                   "referenceList", "inlineRecord", "inlineRecordList", 
                   "inlineTable", "inlineTableList", "disambiguatedIdentifier", 
                   "tableColumnIdentifier", "globalIdentifier", "functionCall", 
                   "functionIdentifier", "functionArguments", "chainedExpression", 
                   "contextKeyword", "binaryOperator", "prefixOperator", 
                   "postfixOperator" ]

    EOF = Token.EOF
    WS=1
    LINE_COMMENT=2
    BLOCK_COMMENT=3
    PLUS=4
    MINUS=5
    MUL=6
    DIV=7
    POW=8
    MOD=9
    AND=10
    OR=11
    NOT=12
    EQ=13
    LT=14
    LTE=15
    GT=16
    GTE=17
    NEQ=18
    IN=19
    EXACTIN=20
    DOT=21
    SEMI=22
    COMMA=23
    LPAREN=24
    RPAREN=25
    LBRACE=26
    RBRACE=27
    LBRACK=28
    RBRACK=29
    AT=30
    COLON=31
    PARENT=32
    SELF=33
    THISITEM=34
    THISRECORD=35
    TRUE=36
    FALSE=37
    NUMBER=38
    STRING=39
    IDENTIFIER=40
    SINGLE_QUOTE_STRING=41
    OPEN_BRACKET_AT=42

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ExpressionUnitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressionElements(self):
            return self.getTypedRuleContext(PowerFxParser.ExpressionElementsContext,0)


        def getRuleIndex(self):
            return PowerFxParser.RULE_expressionUnit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionUnit" ):
                listener.enterExpressionUnit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionUnit" ):
                listener.exitExpressionUnit(self)




    def expressionUnit(self):

        localctx = PowerFxParser.ExpressionUnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_expressionUnit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 6593127125006) != 0):
                self.state = 54
                self.expressionElements()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionElementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressionElement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PowerFxParser.ExpressionElementContext)
            else:
                return self.getTypedRuleContext(PowerFxParser.ExpressionElementContext,i)


        def getRuleIndex(self):
            return PowerFxParser.RULE_expressionElements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionElements" ):
                listener.enterExpressionElements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionElements" ):
                listener.exitExpressionElements(self)




    def expressionElements(self):

        localctx = PowerFxParser.ExpressionElementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_expressionElements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 57
                self.expressionElement()
                self.state = 60 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 6593127125006) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionElementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WS(self):
            return self.getToken(PowerFxParser.WS, 0)

        def LINE_COMMENT(self):
            return self.getToken(PowerFxParser.LINE_COMMENT, 0)

        def BLOCK_COMMENT(self):
            return self.getToken(PowerFxParser.BLOCK_COMMENT, 0)

        def expression(self):
            return self.getTypedRuleContext(PowerFxParser.ExpressionContext,0)


        def getRuleIndex(self):
            return PowerFxParser.RULE_expressionElement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionElement" ):
                listener.enterExpressionElement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionElement" ):
                listener.exitExpressionElement(self)




    def expressionElement(self):

        localctx = PowerFxParser.ExpressionElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_expressionElement)
        try:
            self.state = 66
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 62
                self.match(PowerFxParser.WS)
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 63
                self.match(PowerFxParser.LINE_COMMENT)
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 3)
                self.state = 64
                self.match(PowerFxParser.BLOCK_COMMENT)
                pass
            elif token in [12, 24, 26, 28, 32, 33, 34, 35, 36, 37, 38, 39, 40, 42]:
                self.enterOuterAlt(localctx, 4)
                self.state = 65
                self.expression(0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self):
            return self.getTypedRuleContext(PowerFxParser.LiteralContext,0)


        def reference(self):
            return self.getTypedRuleContext(PowerFxParser.ReferenceContext,0)


        def inlineRecord(self):
            return self.getTypedRuleContext(PowerFxParser.InlineRecordContext,0)


        def inlineTable(self):
            return self.getTypedRuleContext(PowerFxParser.InlineTableContext,0)


        def functionCall(self):
            return self.getTypedRuleContext(PowerFxParser.FunctionCallContext,0)


        def LPAREN(self):
            return self.getToken(PowerFxParser.LPAREN, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PowerFxParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(PowerFxParser.ExpressionContext,i)


        def RPAREN(self):
            return self.getToken(PowerFxParser.RPAREN, 0)

        def prefixOperator(self):
            return self.getTypedRuleContext(PowerFxParser.PrefixOperatorContext,0)


        def binaryOperator(self):
            return self.getTypedRuleContext(PowerFxParser.BinaryOperatorContext,0)


        def postfixOperator(self):
            return self.getTypedRuleContext(PowerFxParser.PostfixOperatorContext,0)


        def getRuleIndex(self):
            return PowerFxParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = PowerFxParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_expression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 69
                self.literal()
                pass

            elif la_ == 2:
                self.state = 70
                self.reference()
                pass

            elif la_ == 3:
                self.state = 71
                self.inlineRecord()
                pass

            elif la_ == 4:
                self.state = 72
                self.inlineTable()
                pass

            elif la_ == 5:
                self.state = 73
                self.functionCall()
                pass

            elif la_ == 6:
                self.state = 74
                self.match(PowerFxParser.LPAREN)
                self.state = 75
                self.expression(0)
                self.state = 76
                self.match(PowerFxParser.RPAREN)
                pass

            elif la_ == 7:
                self.state = 78
                self.prefixOperator()
                self.state = 79
                self.expression(3)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 91
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 89
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                    if la_ == 1:
                        localctx = PowerFxParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 83
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 84
                        self.binaryOperator()
                        self.state = 85
                        self.expression(2)
                        pass

                    elif la_ == 2:
                        localctx = PowerFxParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 87
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 88
                        self.postfixOperator()
                        pass

             
                self.state = 93
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class LiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logicalLiteral(self):
            return self.getTypedRuleContext(PowerFxParser.LogicalLiteralContext,0)


        def numberLiteral(self):
            return self.getTypedRuleContext(PowerFxParser.NumberLiteralContext,0)


        def textLiteral(self):
            return self.getTypedRuleContext(PowerFxParser.TextLiteralContext,0)


        def getRuleIndex(self):
            return PowerFxParser.RULE_literal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLiteral" ):
                listener.enterLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLiteral" ):
                listener.exitLiteral(self)




    def literal(self):

        localctx = PowerFxParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_literal)
        try:
            self.state = 97
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [36, 37]:
                self.enterOuterAlt(localctx, 1)
                self.state = 94
                self.logicalLiteral()
                pass
            elif token in [38]:
                self.enterOuterAlt(localctx, 2)
                self.state = 95
                self.numberLiteral()
                pass
            elif token in [39]:
                self.enterOuterAlt(localctx, 3)
                self.state = 96
                self.textLiteral()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LogicalLiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRUE(self):
            return self.getToken(PowerFxParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(PowerFxParser.FALSE, 0)

        def getRuleIndex(self):
            return PowerFxParser.RULE_logicalLiteral

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogicalLiteral" ):
                listener.enterLogicalLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogicalLiteral" ):
                listener.exitLogicalLiteral(self)




    def logicalLiteral(self):

        localctx = PowerFxParser.LogicalLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_logicalLiteral)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            _la = self._input.LA(1)
            if not(_la==36 or _la==37):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumberLiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(PowerFxParser.NUMBER, 0)

        def getRuleIndex(self):
            return PowerFxParser.RULE_numberLiteral

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumberLiteral" ):
                listener.enterNumberLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumberLiteral" ):
                listener.exitNumberLiteral(self)




    def numberLiteral(self):

        localctx = PowerFxParser.NumberLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_numberLiteral)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(PowerFxParser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TextLiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(PowerFxParser.STRING, 0)

        def getRuleIndex(self):
            return PowerFxParser.RULE_textLiteral

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTextLiteral" ):
                listener.enterTextLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTextLiteral" ):
                listener.exitTextLiteral(self)




    def textLiteral(self):

        localctx = PowerFxParser.TextLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_textLiteral)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(PowerFxParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReferenceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def baseReference(self):
            return self.getTypedRuleContext(PowerFxParser.BaseReferenceContext,0)


        def referenceOperator(self):
            return self.getTypedRuleContext(PowerFxParser.ReferenceOperatorContext,0)


        def referenceList(self):
            return self.getTypedRuleContext(PowerFxParser.ReferenceListContext,0)


        def getRuleIndex(self):
            return PowerFxParser.RULE_reference

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReference" ):
                listener.enterReference(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReference" ):
                listener.exitReference(self)




    def reference(self):

        localctx = PowerFxParser.ReferenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_reference)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.baseReference()
            self.state = 109
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 106
                self.referenceOperator()
                self.state = 107
                self.referenceList()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BaseReferenceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(PowerFxParser.IDENTIFIER, 0)

        def disambiguatedIdentifier(self):
            return self.getTypedRuleContext(PowerFxParser.DisambiguatedIdentifierContext,0)


        def contextKeyword(self):
            return self.getTypedRuleContext(PowerFxParser.ContextKeywordContext,0)


        def getRuleIndex(self):
            return PowerFxParser.RULE_baseReference

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBaseReference" ):
                listener.enterBaseReference(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBaseReference" ):
                listener.exitBaseReference(self)




    def baseReference(self):

        localctx = PowerFxParser.BaseReferenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_baseReference)
        try:
            self.state = 114
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.match(PowerFxParser.IDENTIFIER)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 112
                self.disambiguatedIdentifier()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 113
                self.contextKeyword()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReferenceOperatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DOT(self):
            return self.getToken(PowerFxParser.DOT, 0)

        def NOT(self):
            return self.getToken(PowerFxParser.NOT, 0)

        def getRuleIndex(self):
            return PowerFxParser.RULE_referenceOperator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReferenceOperator" ):
                listener.enterReferenceOperator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReferenceOperator" ):
                listener.exitReferenceOperator(self)




    def referenceOperator(self):

        localctx = PowerFxParser.ReferenceOperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_referenceOperator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            _la = self._input.LA(1)
            if not(_la==12 or _la==21):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReferenceListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(PowerFxParser.IDENTIFIER, 0)

        def referenceOperator(self):
            return self.getTypedRuleContext(PowerFxParser.ReferenceOperatorContext,0)


        def referenceList(self):
            return self.getTypedRuleContext(PowerFxParser.ReferenceListContext,0)


        def getRuleIndex(self):
            return PowerFxParser.RULE_referenceList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReferenceList" ):
                listener.enterReferenceList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReferenceList" ):
                listener.exitReferenceList(self)




    def referenceList(self):

        localctx = PowerFxParser.ReferenceListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_referenceList)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(PowerFxParser.IDENTIFIER)
            self.state = 122
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 119
                self.referenceOperator()
                self.state = 120
                self.referenceList()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InlineRecordContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(PowerFxParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(PowerFxParser.RBRACE, 0)

        def inlineRecordList(self):
            return self.getTypedRuleContext(PowerFxParser.InlineRecordListContext,0)


        def IDENTIFIER(self):
            return self.getToken(PowerFxParser.IDENTIFIER, 0)

        def AT(self):
            return self.getToken(PowerFxParser.AT, 0)

        def getRuleIndex(self):
            return PowerFxParser.RULE_inlineRecord

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInlineRecord" ):
                listener.enterInlineRecord(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInlineRecord" ):
                listener.exitInlineRecord(self)




    def inlineRecord(self):

        localctx = PowerFxParser.InlineRecordContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_inlineRecord)
        self._la = 0 # Token type
        try:
            self.state = 135
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [26]:
                self.enterOuterAlt(localctx, 1)
                self.state = 124
                self.match(PowerFxParser.LBRACE)
                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==40 or _la==41:
                    self.state = 125
                    self.inlineRecordList()


                self.state = 128
                self.match(PowerFxParser.RBRACE)
                pass
            elif token in [40]:
                self.enterOuterAlt(localctx, 2)
                self.state = 129
                self.match(PowerFxParser.IDENTIFIER)
                self.state = 130
                self.match(PowerFxParser.AT)
                self.state = 131
                self.match(PowerFxParser.LBRACE)
                self.state = 132
                self.inlineRecordList()
                self.state = 133
                self.match(PowerFxParser.RBRACE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InlineRecordListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(PowerFxParser.IDENTIFIER)
            else:
                return self.getToken(PowerFxParser.IDENTIFIER, i)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(PowerFxParser.COLON)
            else:
                return self.getToken(PowerFxParser.COLON, i)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PowerFxParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(PowerFxParser.ExpressionContext,i)


        def SINGLE_QUOTE_STRING(self, i:int=None):
            if i is None:
                return self.getTokens(PowerFxParser.SINGLE_QUOTE_STRING)
            else:
                return self.getToken(PowerFxParser.SINGLE_QUOTE_STRING, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PowerFxParser.COMMA)
            else:
                return self.getToken(PowerFxParser.COMMA, i)

        def getRuleIndex(self):
            return PowerFxParser.RULE_inlineRecordList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInlineRecordList" ):
                listener.enterInlineRecordList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInlineRecordList" ):
                listener.exitInlineRecordList(self)




    def inlineRecordList(self):

        localctx = PowerFxParser.InlineRecordListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_inlineRecordList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [40]:
                self.state = 137
                self.match(PowerFxParser.IDENTIFIER)
                self.state = 138
                self.match(PowerFxParser.COLON)
                self.state = 139
                self.expression(0)
                pass
            elif token in [41]:
                self.state = 140
                self.match(PowerFxParser.SINGLE_QUOTE_STRING)
                self.state = 141
                self.match(PowerFxParser.COLON)
                self.state = 142
                self.expression(0)
                pass
            else:
                raise NoViableAltException(self)
